init: init project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://9pasha.github.io/skyeng",
+  "homepage": "https://9pasha.github.io/test-app",
   "name": "shop",
   "version": "0.1.0",
   "private": true,
